feat(order): implement pagination and retrieval for order history